added remote backend module and main config file

--- a/website/index.html
+++ b/website/index.html
@@ -107,7 +107,7 @@
 
         <!-- Footer -->
         <footer class="footer">
-            <p>&copy; 2024 Smit Joshi. Built for Cloud Resume Challenge.</p>
+            <p>&copy; 2024 Smit Joshi.</p>
         </footer>
     </div>
 </body>
